--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1177,7 +1177,6 @@ input, select, textarea {
 		-webkit-transform: scale(1.0);
 		-ms-transform: scale(1.0);
 		transform: scale(1.0);
-		-webkit-backface-visibility: hidden;
 		position: fixed;
 		top: 0;
 		left: 0;
@@ -1301,9 +1300,7 @@ input, select, textarea {
 
 		}
 
-/* Header */
-
-	#header {
+#header {
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
@@ -1403,24 +1400,30 @@ input, select, textarea {
 			}
 
 			#header nav ul {
-				display: -moz-flex;
-				display: -webkit-flex;
-				display: -ms-flex;
-				display: flex;
-				margin-bottom: 0;
-				list-style: none;
-				padding-left: 10px; /* Increased padding */
-				padding-right: 10px; /* Increased padding */
-				padding-top: 10px; /* Added padding */
-				padding-bottom: 10px; /* Added padding */
-				border: solid 1px #ffffff;
-				border-radius: 4px;
-			}
+					display: -moz-flex;
+					display: -webkit-flex;
+					display: -ms-flex;
+					display: flex;
+					flex-wrap: wrap;
+					justify-content: center;
+					margin-bottom: 0;
+					list-style: none;
+					padding-left: 10px;
+					padding-right: 10px;
+					padding-top: 10px;
+					padding-bottom: 10px;
+					border: solid 1px #ffffff;
+					border-radius: 4px;
+				}
 			
 
 			#header nav ul li {
 				padding-left: 0;
 				border-left: solid 1px #ffffff;
+				nav li {
+				flex: 0 1 auto;
+				margin: 0.25rem;
+}
 			}
 
 				#header nav ul li:first-child {
@@ -1429,13 +1432,13 @@ input, select, textarea {
 
 				#header nav ul li a {
 					display: block;
-					min-width: 10rem; /* Increased width */
-					height: 3.5rem; /* Increased height */
-					line-height: 3.5rem; /* Adjusted line height */
-					padding: 0 1.75rem 0 1.75rem; /* Increased padding */
+					min-width: 10rem;
+					height: 3.5rem;
+					line-height: 3.5rem;
+					padding: 0 1.75rem 0 1.75rem;
 					text-transform: uppercase;
-					letter-spacing: 0.2rem; /* Adjusted letter spacing */
-					font-size: 0.8rem; /* Increased font size */
+					letter-spacing: 0.2rem;
+					font-size: 0.8rem;
 					border-bottom: 0;
 				}
 				
@@ -1455,7 +1458,7 @@ input, select, textarea {
 			top: 0;
 			left: calc(50% - 1px);
 			width: 1px;
-			height: 100%;
+			height: 0; /* Changed to 0 to stop the line from crossing the middle */
 			background: #ffffff;
 		}
 
@@ -1493,6 +1496,17 @@ input, select, textarea {
 				padding-bottom: 0;
 				opacity: 0;
 			}
+
+			@media screen and (max-width: 768px) {
+		nav ul {
+			flex-direction: column;
+		}
+		nav li {
+			margin: 0.125rem 0;
+		}
+	}
+
+
 
 		@media screen and (max-width: 980px) {
 
@@ -1732,3 +1746,25 @@ input, select, textarea {
 		body.is-preload #footer {
 			opacity: 0;
 		}
+
+
+
+
+
+		cssimg {
+    max-width: 100%;
+    height: auto;
+}
+
+
+
+
+@media screen and (max-width: 768px) {
+    .navigation-buttons {
+        flex-direction: column;
+    }
+    .button {
+        margin: 5px 0;
+        width: 100%;
+    }
+}
